<resources>
    <string name="app_name">GRC</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="OK">OK</string>
    <string name="CANCEL">CANCEL</string>
    <string name="category">CATEGORY</string>
    <string name="title">TITLE</string>
    <string name="show_on_map">Show on Map</string>
    <string name="fare">Fare: </string>
    <string name="availabity">Availability: </string>
    <string name="train_des">TRAIN DESCRIPTION</string>
    <string name="add_news">ADD NEWS</string>
    <string name="place_address">Place Address</string>
    <string name="termsandcondition">Terms and Conditions</string>
    <string name="hide">HIDE</string>
    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_book_ticket">Book Ticket</string>
    <string name="menu_view_ticket">Your Tickets</string>
    <string name="menu_fare_enquiry">Fare Enquiry</string>
    <string name="menu_train_stations">Train Stations</string>
    <string name="menu_admin_operations">Admin Operations</string>
    <string name="menu_add_train">Add Train</string>
    <string name="menu_add_train_stations">Add Train Station</string>
    <string name="menu_add_notification">Add Notification</string>
    <string name="menu_add_dashborad_item">Add Dashboard Item</string>
    <string name="menu_about_us">About Us</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help &amp; Feedback</string>
    <string name="menu_history">History</string>
    <string name="menu_maps">Maps</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_qrcode">Your QR Codes</string>
    <string name="menu_privacy_policy">Privacy Policy</string>
    <string name="menu_privacy_security">Privacy Security</string>
    <string name="menu_faq">FAQ</string>
    <string name="menu_view_all_trains">All Trains</string>
    <string name="home_second">Home Second</string>
    <string name="workinghours">"Hours:
Saturday	Closed ,Sunday	Closed\n
Monday	8am–5pm ,Tuesday	8am–5pm\n
Wednesday	8am–5pm ,Thursday	8am–5pm\n
Friday	8am–5pm\n"</string>
    <string name="upload_image">Click to upload Image</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="history">It’s been nearly 120 years since our British colonialists constructed the first railway lines. The colonial infrastructure made over a century ago helped shape the economic geography of Ghana. As a British colony, Ghana (then known as the Gold Coast) was developed by Europeans for Europeans. At the time, railways were considered the best mode of transportation. How else could that many goods and produce and minerals be transported back then. STC was not in service.\n\n
    The railway system of Ghana began in 1898 under the Gold Coast Civil Service, with its headquarters at Sekondi. But after the construction of the Takoradi Harbour, it was transferred to Takoradi. The purpose of the railroad was to transport minerals and crops from the mainland to the harbour, which were then shipped to Europe.\n\n
    Two railway lines, built by the British in 1898-1918, were primarily established for military domination against natives or other colonial powers. But the railways also supported the extensive extraction of precious minerals and cash crop agriculture. The first railroad, the Western line, linked the coastal town of Sekondi with the gold-rich enclaves of Obuasi and Tarkwa and was then extended to the hinterland city of Kumasi for military domination. Mining required the transportation of heavy machinery, large quantities of firewood (or coal), and labourers from other regions. European mining companies reaped benefits through this railway system of precious minerals such as gold bauxite, manganese, and diamonds.\n\n
    Fun Fact: The Governorship of William E. Maxwell (1895-97) was instrumental in shaping the railway system back then, because he had previous experience in Malay State where railways were used in tin mines.\n\n
    The second, the Eastern line, linked the capital city of Accra to the network through Kumasi, affecting the economic and spatial development of Ghanaians through integration. This railway connectivity strongly affected the production of cash crops such as coffee and cocoa. As soon as the second line opened, farmers decided to use it to transport crops, massively decreasing their transportation costs (aha!).\n\n
    In 1919, Sir Gordon Guggisberg was appointed governor of the Gold Coast. He believed that the country was capable of attaining the development levels of Europe. He undertook the development and extension of the railway system, built a seaport, and constructed an extensive network of roads. Guggisberg focused on promoting the growth of the economy to give Ghana a competitive advantage in the world market. His policy aimed at rapid development of the country. By the mid-1920s, rail lines covered large portions of the southern part. The expenses accounted for 31.4% of total public expenditure between 1898-1931.\n\n
    Around 80% of cocoa, the country’s main export commodity, was transported through rail, making Ghana the world’s largest exporter of the crop by 1911. By 1927, cocoa amounted to 80% of Ghana’s exports. By the 1960s, railways transported nearly 2 million tonnes of freight and 8 million passengers a year. This cheaper, convenient mode of transportation was a quicker way to carry more cargo.\n\n
    </string>
    <string name="train_type_prompt">---Choose Train Type---</string>
    <string-array name="train_type_arrays">
        <item>---Choose Train Type---</item>
        <item>AC</item>
        <item>General</item>
        <item>Goods &amp; Cargo</item>
    </string-array>
    <string-array name="telco_array">
        <item>MTN</item>
        <item>VODAFONE</item>
        <item>AIRTELTIGO</item>
    </string-array>
    <string name="train_station_prompt">---Choose Train Station---</string>
    <string-array name="train_station_arrays">
        <item>---Choose Train Station---</item>
        <item>Accra Railway Station</item>
        <item>Odaw Railway Station</item>
        <item>Achimota Train Station</item>
        <item>Batsonaa Train Station</item>
        <item>Asoprochona Train Station</item>
        <item>Tema Railway Station</item>
        <item>Central Lorry station</item>
        <item>Nsawam Railway Station</item>
    </string-array>
    <string name="regions_prompt">---Choose Region---</string>
    <string-array name="regions_arrays">
        <item>---Choose Region---</item>
        <item>Greater Accra</item>
        <item>Ashanti Region</item>
        <item>Central Region</item>
        <item>Brong-Ahafo Region</item>
        <item>Western Region</item>
        <item>Eastern Region</item>
        <item>Volta Region</item>
        <item>Upper East Region</item>
        <item>Upper West Region</item>
        <item>Northern Region</item>
    </string-array>
    <string name="payment_prompt">---Choose Payment Method---</string>
    <string-array name="payment_arrays">
        <item>Cash</item>
        <item>Mobile Money</item>
    </string-array>
    <string name="category_prompt">---Choose News Category---</string>
    <string-array name="category_arrays">
        <item>---Choose News Category---</item>
        <item>POLITICS</item>
        <item>ENTERTAINMENT</item>
        <item>SPORTS</item>
        <item>SCIENCE</item>
        <item>BUSINESS</item>
        <item>FINANCE</item>
        <item>ECONOMY</item>
        <item>ENERGY</item>
        <item>STOCK</item>
        <item>MINING</item>
        <item>REAL ESTATE</item>
        <item>INVESTMENTS</item>
        <item>TRADITIONAL</item>
        <item>SOCIAL</item>
    </string-array>
    <string name="notice"><b>NB</b>:Passengers can only book for <b>three(3)</b>additional people.</string>
    <string name="booking_notice"><b>NB</b>:It is required to upload an image for further reasons.\nClick on the current date to change booking date if wished.</string>
    <string name="short_lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="title_activity_maps">Map</string>
    <string name="api_key">AIzaSyCkqEQc_29fVVjRj0PE5OLHezQ9ADeAlOk</string>
    <string-array name="nearby_option">
        <item>Select a Type</item>
        <item>Train Station</item>
        <item>ATM Booth</item>
        <item>Fire Service</item>
        <item>Gas Station</item>
        <item>Park</item>
        <item>Pharmacy</item>
        <item>Police Nearby</item>
        <item>Post Office</item>
        <item>Restaurant</item>
        <item>Shopping Mall</item>
    </string-array>
    <string name="quest1">How to I book a ticket?</string>
    <string name="answer1">1. Click on Book Ticket on the side menu \n2. Click on BOOK NOW depending on your choice. \n3. After checking for availability, you would can now proceed to book a ticket.</string>
    <string name="quest2">Do I required something to book a ticket?</string>
    <string name="answer2">Yes, you need to take a picture of or together with your mates to proceed to book a ticket.</string>
    <string name="quest3">How to i see the fare of my journey?</string>
    <string name="answer3">You can view your fare charge per train by clicking on Book Ticket Now in the side menu, all traines with thier prices are indicated there.</string>
</resources>