<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".Fragments.DashboardItemFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/spacing_xlarge">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="@dimen/spacing_middle"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/newsimage"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_picture"/>

            <Button
                android:id="@+id/chooseImage"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upload_image"
                app:rippleColor="#FFF"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:textAlignment="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                android:textColor="@color/grey_40" />

            <Spinner
                android:id="@+id/category"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:prompt="@string/category_prompt"
                android:entries="@array/category_arrays"
                android:layout_marginLeft="-4dp"
                android:layout_marginRight="-4dp"/>

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_middle"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textAlignment="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                android:textColor="@color/grey_40" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-4dp"
                    android:layout_marginRight="-4dp"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:theme="@style/EditText.Grey" />

            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_middle"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/train_des"
                android:textAlignment="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                android:textColor="@color/grey_40" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/txt_area_dark_yellow"
                android:padding="@dimen/spacing_middle"
                android:textColorHint="@color/grey_40">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/newsdescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:gravity="top"
                    android:inputType="textMultiLine"
                    android:maxLines="12"
                    android:minLines="7"
                    android:theme="@style/EditText.Yellow" />

            </com.google.android.material.textfield.TextInputLayout>
            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_large"/>
            <Button
                android:id="@+id/addnews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_rounded_primary"
                android:text="@string/add_news"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </LinearLayout>
    </RelativeLayout>
    </ScrollView>
    </LinearLayout>

</LinearLayout>